# asyn-retry-policy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
asyn-retry-policy-macro/: Cargo.toml
asyn-retry-policy-macro/src/: lib.rs
examples/: using_macro.rs  using_policy.rs
src/: lib.rs
tests/: jitter_and_backoff.rs  macro_predicate_closure.rs  macro_predicate_tests.rs  macro_tests.rs
