[package]
name = "asyn-retry-policy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# Futures traits and combinators
futures = "0.3"
# For async trait objects if needed
async-trait = "0.1"
# Jitter/randomness for backoff
rand = "0.8"
# Simplified error types
thiserror = "1.0"
