[package]
name = "asyn-retry-policy"
version = "0.1.0"
edition = "2024"
description = "Async retry helpers with exponential backoff, jitter, and an ergonomic #[retry] attribute macro."
homepage = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
repository = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
documentation = "https://docs.rs/asyn-retry-policy"
keywords = ["retry", "backoff", "jitter", "async", "tokio", "procedural-macro"]
categories = ["asynchronous", "network-programming", "development-tools"]
license = "MIT"
authors = ["Mohtashim Nawaz"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "test-util"] }
# Futures traits and combinators
futures = "0.3"
# For async trait objects if needed
async-trait = "0.1"
# Jitter/randomness for backoff
rand = { version = "0.8", features = ["small_rng"] }
# Simplified error types
thiserror = "1.0"

# Proc-macro crate providing the `#[retry]` attribute
asyn-retry-policy-macro = "0.1.0"
