[package]
name = "asyn-retry-policy-macro"
version = "0.1.0"
edition = "2024"
description = "Proc-macro attribute providing `#[retry]` for ergonomic async retrying."
homepage = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
repository = "https://github.com/YOUR_GITHUB_USER/asyn-retry-policy"
documentation = "https://docs.rs/asyn-retry-policy-macro"
license = "MIT"
license-file = "../LICENSE"
authors = ["Mohtashim Nawaz"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
